# kaarigar-voiceai

./: .env.example  README.md  pyproject.toml  requirements.txt
app/: main.py
app/agents/: __init__.py  context.py  customer_inbound.py
app/api/routes/: telephony.py
app/core/: config.py
app/schemas/: worker_extraction.py
app/services/: extraction_service.py  prompts.py
app/telephony/: bot.py  gate.py  prompts.py  xml.py
