[project]
name = "kaarigar-voiceai"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "httpx>=0.27",
    "loguru>=0.7",
    "pipecat-ai[google,openai,sarvam,silero]>=1.0.0",
    "pydantic-settings>=2.5",
    "python-dotenv>=1.0",
    "uvicorn[standard]>=0.30",
]
